fix overflow problem for dropdowns in overflow: scroll containers

--- a/src/angular-app/languageforge/lexicon/shared/share-with-others/share-with-others.scss
+++ b/src/angular-app/languageforge/lexicon/shared/share-with-others/share-with-others.scss
@@ -32,11 +32,6 @@
 #who-has-access {
   margin-top: 2rem;
 
-  .dropdown-menu {
-    left: unset;
-    right: 0;
-  }
-
   .listview {
     max-height: 16rem;
     overflow-y: auto;
@@ -90,4 +85,10 @@
     margin-right: 0.5em;
     margin-bottom: 0;
   }
+}
+
+/* needed to make the dropdowns in the modal
+appear over top of the modal and not behind it. */
+.modal-dropdown {
+  z-index: 10000 !important;
 }
